Changelog for Plone

    (name of developer listed in brackets)

Plone 3.1.8 - UNRELEASED




Plone 3.1.7 - November 5, 2008

    - Updated the PloneTool normalization tests to match plone.i18n policies.
      [hannosch]


Plone 3.1.6 - October 7, 2008

    - PloneTool.reindexOnReorder: Don't fail if the catalog contains stale
      entries.
      [stefan]

    - Fixed the silent fail of the group membership from a user via the
      prefs_user_memberships form. This closes 
      http://dev.plone.org/plone/ticket/8468
      [garbas, calvinhp]

    - Fixed the migration from 3.0.1 to 3.0.2 to now put back the actionicons
      for the languages control panel. 
      This closes http://dev.plone.org/plone/ticket/7901
      [KurtB, calvinhp]

    - Changed isIDAutoGenerated to work with types that have .'s in them in the
      case that namespaces are included in the type's portal_type. For example:
      collective.types.ExternalSearch (to pick one from the collective). This
      closes http://dev.plone.org/plone/ticket/8480.
      [pbugni,dunlapm]

    - Changed prefs_group_members.pt search table to behave coherently with
      prefs_users_overview.pt, including the results header only when 
      there are results to show.
      [igbun]

    - By default, keep the styling when managing portlets separate from the
      styling when viewing the portlets, to improve usability with custom
      themes.  This closes http://dev.plone.org/plone/ticket/8391
      [davisagli]

    - Fixed syntax error in prefs_group_details.pt that prevented the saving
      of lines fields as well as an error that caused groups to sometimes display
      "()" as the contents of a previously undefined lines field. This closes
      http://dev.plone.org/plone/ticket/8427. Thanks to michaellaunay for the
      updated bugreport and included fix.
      [dunlapm]

    - Fixed link to author.cpt from personalize_form so it works for